# PINNs-Journey

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
configs/: burgers_1d.yaml  heat_1d.yaml  ode_exponential.yaml
docs/: 01_sci_ml_overview.md  02_math_foundations.md  03_autograd_deep_dive.md  04_pinn_theory.md  05_heat_equation.md  06_burgers_equation.md  07_advanced_pdes.md  08_optimization_challenges.md  09_modern_improvements.md  10_operator_learning.md  QUICKSTART.md  references.md
experiments/: run_experiments.py
notebooks/: 00_quickstart.ipynb  01_autograd_fundamentals.ipynb  02_first_pinn_ode.ipynb  03_heat_equation.ipynb  04_burgers_equation.ipynb  05_wave_equation.ipynb  06_poisson_equation.ipynb  07_reaction_diffusion.ipynb  08_experiments.ipynb  09_literature_review.ipynb
scripts/: run_all_notebooks.py  test_wave.py
src/pinns/: __init__.py  config.py
src/pinns/equations/: __init__.py  base.py  burgers.py  heat.py  ode.py  poisson.py  reaction_diffusion.py  registry.py  schrodinger.py  wave.py
src/pinns/evaluation/: __init__.py  metrics.py
src/pinns/losses/: __init__.py  physics.py
src/pinns/models/: __init__.py  activations.py  initializers.py  mlp.py
src/pinns/sampling/: __init__.py  collocation.py
src/pinns/training/: __init__.py  trainer.py
src/pinns/utils/: __init__.py  derivatives.py  logging.py  seeding.py
tests/: test_core.py  test_pinns.py
